css/styles.css
* {
  padding: 0px;
  margin: 0px;
  border: 0px;
  font-family: sans-serif;
  box-sizing: border-box;
}

html, body {
  overflow: hidden;
}

body {
  min-height: 100vh;
}

.navbar {
  display: flex;
  padding-left: 8%;
  padding-right: 8%;
}

h1 {
  color: white;
  flex: 1;
  text-align: right;
  margin: 0px;
}

.jum {
  display: flex;
  height: 100vh;
}

.row {
  height: 100%;
  flex: 1;
  width: 100%;
  margin: 0px;
}

#left-content {
  display: none;
  min-height: 100%;
  background-color: #ebebeb;
  margin: 0px;
  padding: 0px;
  position: absolute;
  z-index: 1;
  box-sizing: border-box;
}

#left-content input {
  width: 100%;
  margin-top: 20px;
  padding: 10px 0px;
  padding-left: 5%;
  border: 0.5px solid black;
  border-left: none;
  border-radius: 1px;
  font-size: 1.2em;
}

#left-content button {
  width: 100%;
  margin-top: 10px;
  padding: 10px 0px;
  color: white;
  background-color: #444444;
  white-space: nowrap;
  font-size: 1.3em;
}

#left-content ul {
  width: 100%;
  max-height: 62vh;
  margin-top: 15px;
  overflow: scroll;
  padding: 0px;
}

#left-content ul .todo-list {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  margin: 0px;
  cursor: pointer;
  list-style: none;
}

#left-content ul .todo-list:hover {
  background-color: #333333;
  color: white;
}

#left-content ul .todo-list li {
  height: 100%;
  width: 90%;
  padding: 15px 0px;
  padding-left: 10%;
  font-size: 1.2em;
}

#left-content ul .todo-list li h4 {
  margin-bottom: 0px;
}

#left-content ul .todo-list i {
  font-size: 1.2em;
  margin-right: 10%;
}

input {
  outline: none;
}

#right-content {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  margin-top: 30px;
}

#right-content h2 {
  margin: 0px;
}

#right-content #todo-container {
  height: 42vh;
  overflow-y: scroll;
  overflow-x: hidden;
  border: 0.5px solid black;
  border-radius: 5px;
}

#right-content #todo-container .todo-task {
  padding: 15px 0px 15px 0px;
  display: flex;
  align-items: center;
  border: 0.5px solid black;
}

#right-content #todo-container .todo-task h3 {
  word-break: break-all;
  font-size: 1.3em;
  padding: 1%;
  padding-left: 1%;
  margin-left: 10px;
  margin: 0px;
  border-radius: 5px;
}

#right-content #todo-container .todo-task .task-options {
  position: relative;
  white-space: nowrap;
  flex: 1;
  text-align: right;
  margin-left: 15px;
  margin-right: 10px;
}

#right-content #todo-container .todo-task .task-options i {
  display: inline-block;
  font-size: 1.4em;
  padding: 0px;
  margin: 0px;
  margin-right: 15px;
}

#right-content #todo-container .todo-task .check-box {
  display: block;
  position: relative;
  padding-left: 14px;
  padding-right: 30px;
  cursor: pointer;
  user-select: none;
}

#right-content #todo-container .todo-task .check-box .checkTask {
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

#right-content #todo-container .todo-task .check-box .checkmark {
  position: absolute;
  height: 25px;
  width: 25px;
  background-color: #eee;
  border: 1px solid black;
  border-radius: 5px;
}

.checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

.check-box input:checked ~ .checkmark:after {
  display: block;
}

.check-box .checkmark:after {
  left: 7px;
  top: 0px;
  width: 10px;
  height: 17px;
  border: solid green;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.make-task {
  display: flex;
  flex-direction: column;
  margin-top: 10px;
}

.make-task * {
  width: 100%;
}

.make-task input {
  padding: 10px 0px;
  padding-left: 5%;
  border: 0.5px solid black;
  border-radius: 1px;
  font-size: 1.2em;
}

.make-task .todoName {
  margin-top: 5px;
  padding: 10px 0px;
  color: white;
  background-color: #444444;
  white-space: nowrap;
  font-size: 1.2em;
}

.make-task #deleteAll {
  margin-top: 5px;
  padding: 10px 0px;
  color: white;
  background-color: #c83f49;
  white-space: nowrap;
  font-size: 1.2em;
}

@media only screen and (min-width: 992px) {
  h1 {
    text-align: center;
  }
  #left-content {
    display: block !important;
    position: relative;
    z-index: 0;
  }
  #right-content {
    display: flex;
    flex: 1;
    margin-left: 25px;
    margin-right: 25px;
  }
  #right-content #todo-container {
    height: 55vh;
    overflow-y: scroll;
    border: 0.5px solid black;
    border-radius: 5px;
  }
  #left-content ul {
    width: 100%;
    margin-top: 15px;
    overflow: scroll;
    padding: 0px;
  }
  .make-task input {
    padding: 10px 0px;
    padding-left: 2%;
    border: 0.5px solid black;
    border-radius: 1px;
    font-size: 1.2em;
  }
}
@media only screen and (min-width: 2000px) {
  #right-content #todo-container {
    height: 70vh;
  }
  * {
    font-size: 1.1em;
  }
}

/*# sourceMappingURL=styles.css.map */

